[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://addons/shader_procedural_textures/Worley_texture.tscn" type="PackedScene" id=2]
[ext_resource path="res://raymarch.shader" type="Shader" id=3]
[ext_resource path="res://Camera_Pivot.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]

size = Vector3( 2, 2, 2 )
subdivide_width = 10
subdivide_height = 10
subdivide_depth = 10

[sub_resource type="ViewportTexture" id=3]

resource_local_to_scene = true
flags = 6
viewport_path = NodePath("Worley_texture")
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=4]

resource_local_to_scene = true
render_priority = 0
shader = ExtResource( 3 )
shader_param/depth = 128.0
shader_param/light_dir = Vector3( 0, 1, -1 )
shader_param/cloud_density_factor = 20.0
shader_param/cloud_steps = 128.0
shader_param/light_density_factor = 20.0
shader_param/light_steps = 64.0
shader_param/albedo_texture = SubResource( 3 )
_sections_unfolded = [ "Resource", "shader_param" ]

[node name="Main" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="max_distance" type="HSlider" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 556.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 1.0
max_value = 100.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="cloud_density" type="HSlider" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 20.0
margin_right = 556.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 1.0
max_value = 50.0
step = 1.0
page = 0.0
value = 25.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="light_density" type="HSlider" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 35.0
margin_right = 556.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 1.0
max_value = 50.0
step = 1.0
page = 0.0
value = 25.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="Worley_texture" parent="." index="3" instance=ExtResource( 2 )]

texture_size = Vector3( 128, 128, 128 )

[node name="TestCube" type="MeshInstance" parent="." index="4"]

transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = SubResource( 4 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Camera Pivot" type="Position3D" parent="." index="5"]

script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="Camera Pivot" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.15566 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[connection signal="value_changed" from="max_distance" to="." method="_on_max_distance_value_changed"]

[connection signal="value_changed" from="cloud_density" to="." method="_on_cloud_density_value_changed"]

[connection signal="value_changed" from="light_density" to="." method="_on_light_density_value_changed"]


